; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/events/extr_core.c_cpu_function_call.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/events/extr_core.c_cpu_function_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.remote_function_call = type { i32 (i8*)*, i8*, i32, i32* }

@ENXIO = common dso_local global i32 0, align 4
@remote_function = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32 (i8*)*, i8*)* @cpu_function_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cpu_function_call(i32 %0, i32 (i8*)* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32 (i8*)*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.remote_function_call, align 8
  store i32 %0, i32* %4, align 4
  store i32 (i8*)* %1, i32 (i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = getelementptr inbounds %struct.remote_function_call, %struct.remote_function_call* %7, i32 0, i32 0
  %9 = load i32 (i8*)*, i32 (i8*)** %5, align 8
  store i32 (i8*)* %9, i32 (i8*)** %8, align 8
  %10 = getelementptr inbounds %struct.remote_function_call, %struct.remote_function_call* %7, i32 0, i32 1
  %11 = load i8*, i8** %6, align 8
  store i8* %11, i8** %10, align 8
  %12 = getelementptr inbounds %struct.remote_function_call, %struct.remote_function_call* %7, i32 0, i32 2
  %13 = load i32, i32* @ENXIO, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %12, align 8
  %15 = getelementptr inbounds %struct.remote_function_call, %struct.remote_function_call* %7, i32 0, i32 3
  store i32* null, i32** %15, align 8
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @remote_function, align 4
  %18 = call i32 @smp_call_function_single(i32 %16, i32 %17, %struct.remote_function_call* %7, i32 1)
  %19 = getelementptr inbounds %struct.remote_function_call, %struct.remote_function_call* %7, i32 0, i32 2
  %20 = load i32, i32* %19, align 8
  ret i32 %20
}

declare dso_local i32 @smp_call_function_single(i32, i32, %struct.remote_function_call*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
